--- a/WebApp/Views/Shared/pv_SideNavUsuario.cshtml
+++ b/WebApp/Views/Shared/pv_SideNavUsuario.cshtml
@@ -1,36 +1,36 @@
-﻿<div class="row center-align blue lighten-5" id="sideNavSuperior">
-    <div class="col"></div>
-    <div class="col s10">
-        <br />
-        <div class="row center-align">
-            <img src="~/Images/Perfil/user-icon.png" width="40%" />
-        </div>
-        <div class="row center-align">
-            <p class="blue-text">NOMBRE_USUARIO</p>
-        </div>
-        <div class="row center-align">
-            <p class="blue-text">E-MAIL</p>
-        </div>
-    </div>
-    <div class="col"></div>
-</div>
-<div class="row center-align light-blue darken-3" id="sideNavInferior">
-    <div class="col"></div>
-    <div class="col s10">
-        <div class="row center-align">
-            <p class="white-text">USUARIO</p>
-            <hr />
+﻿<div class="side-nav">
+    <div class="row center-align blue lighten-5" id="sideNavSuperior">
+        <div class="col"></div>
+        <div class="col s10">
             <br />
-            <a href="#" class="btn blue accent-3" id="boton">PERFIL</a>
+            <div class="row center-align">
+                <img src="~/Images/Perfil/user-icon.png" width="30%" />
+            </div>
+            <ul>
+                <li class="center-align"><p class="blue-text">NOMBRE_USUARIO</p></li>
+                <li class="center-align"> <p class="blue-text">E-MAIL</p></li>
+            </ul>
         </div>
-        <div class="row center-align">
-            <p class="white-text">NECESIDADES</p>
-            <hr />
-            <br />
-            <a href="#" class="btn blue accent-3" id="boton">PROPIAS</a>
-        </div>
-        <div class="row center-align"><a href="#" class="btn blue accent-3 white-text" id="boton">OTROS USUARIOS</a></div>
-        <div class="row center-align"><a href="#" class="btn blue accent-3 white-text" id="boton">CREAR</a></div>
+        <div class="col"></div>
     </div>
-    <div class="col"></div>
+    <div class="row center-align light-blue darken-3" id="sideNavInferior">
+        <div class="col"></div>
+        <div class="col s10">
+            <div class="row center-align">
+                <p class="white-text">USUARIO</p>
+                <hr />
+                <br />
+                <a href="#" class="btn blue accent-3" id="boton">PERFIL</a>
+            </div>
+            <div class="row center-align">
+                <p class="white-text">NECESIDADES</p>
+                <hr />
+                <br />
+                <a href="#" class="btn blue accent-3" id="boton">PROPIAS</a>
+            </div>
+            <div class="row center-align"><a href="#" class="btn blue accent-3 white-text" id="boton">OTROS USUARIOS</a></div>
+            <div class="row center-align"><a href="#" class="btn blue accent-3 white-text" id="boton">CREAR</a></div>
+        </div>
+        <div class="col"></div>
+    </div>
 </div>
