--- a/WebApp/Views/Shared/pv_NavbarUsuario.cshtml
+++ b/WebApp/Views/Shared/pv_NavbarUsuario.cshtml
@@ -1,9 +1,17 @@
 ﻿<nav>
-    <div class="nav-wrapper blue accent-1">
-        <a href="/Home/Inicio" class="brand-logo">AYUDANDO</a>
-        <ul id="nav-mobile" class="right hide-on-med-and-down">
-            <li><a href="">ACERCA DE</a></li>
-            <li><a href="#" id="btnRegistrarse">SALIR</a></li>
+    <div class="nav-wrapper blue accent-1">        
+        <ul id="nav-mobile" class="hide-on-med-and-down col m12 l12">
+            <li class="col m6 l6">
+                <a href="/Home/Inicio" class="brand-logo">AYUDANDO</a>
+            </li>
+            <li class="buscardor col m4 l4">
+                <div id="buscador" class="input-field">
+                    <i class="material-icons prefix white-text">search</i>
+                    <input id="autocomplete-input" class="autocomplete white-text">
+                </div>
+            </li>
+            <li class="m1 l1 right"><a href="#" id="btnRegistrarse">SALIR</a></li>
+            <li class="m1 l1 right"><a href="">ACERCA DE</a></li>
         </ul>
     </div>
 </nav>
