--- a/WebApp/Views/Shared/pv_SideNavUsuario.cshtml
+++ b/WebApp/Views/Shared/pv_SideNavUsuario.cshtml
@@ -1,4 +1,5 @@
-﻿<div class="side-nav">
+﻿@using WebApp.Helpers
+<div class="side-nav">
     <div class="row center-align blue lighten-5" id="sideNavSuperior">
         <div class="col"></div>
         <div class="col s10">
@@ -7,8 +8,23 @@
                 <img src="~/Images/Perfil/user-icon.png" width="30%" />
             </div>
             <ul>
-                <li class="center-align"><p class="blue-text">NOMBRE_USUARIO</p></li>
-                <li class="center-align"> <p class="blue-text">E-MAIL</p></li>
+                @if (UsuarioLogeadoHelper.NombreUsuario != null)
+                {
+                    <li class="center-align"><p class="blue-text">@UsuarioLogeadoHelper.NombreUsuario</p></li>
+                }
+                else
+                {
+                    <li class="center-align"><p class="blue-text">NOMBRE_USUARIO</p></li>
+                }
+
+                @if (UsuarioLogeadoHelper.Email != null)
+                {
+                    <li class="center-align"> <p class="blue-text">@UsuarioLogeadoHelper.Email</p></li>
+                }
+                else
+                {
+                    <li class="center-align"> <p class="blue-text">E-MAIL</p></li>
+                }
             </ul>
         </div>
         <div class="col"></div>
