--- a/WebApp/Views/Shared/pv_SideNavUsuario.cshtml
+++ b/WebApp/Views/Shared/pv_SideNavUsuario.cshtml
@@ -36,7 +36,7 @@
                 <p class="white-text">USUARIO</p>
                 <hr />
                 <br />
-                <a href="#" class="btn blue accent-3" id="boton">PERFIL</a>
+                <a href="/Perfil/Inicio" class="btn blue accent-3" id="boton">PERFIL</a>
             </div>
             <div class="row center-align">
                 <p class="white-text">NECESIDADES</p>
