Modificacion de MisNecesidades y Creacion de tabla
- Creacion de tabla NecesidadesEstado
- Uso de Partial View MisNecesidades
- Insert de Donacion tipo y NecesidadesEstado

--- a/WebApp/Views/Necesidad/MisNecesidades.cshtml
+++ b/WebApp/Views/Necesidad/MisNecesidades.cshtml
@@ -21,6 +21,8 @@
     </div>
     <div id="ContenidoMisNecesidades" class="row">
         @Html.Partial("pv_CardMisNecesidades")
+        @Html.Partial("pv_CardMisNecesidades")
+        @Html.Partial("pv_CardMisNecesidades")
     </div>
 </div>
 
