--- a/WebApp/Views/Perfil/Inicio.cshtml
+++ b/WebApp/Views/Perfil/Inicio.cshtml
@@ -22,7 +22,7 @@
             <div id="LadoIzquierdo" class="col s12 m3 l3">
                 <div class="card">
                     <div class="card-image">
-                        @if (Model.RutaFoto == "" || Model.RutaFoto == null)
+                        @if (Model.RutaFoto != "" || Model.RutaFoto != null)
                         {
                             <img src="~/@Model.RutaFoto" class="img-perfil"/>
                         }
