--- a/WebApp/Views/Denuncia/pv_CardDenuncias.cshtml
+++ b/WebApp/Views/Denuncia/pv_CardDenuncias.cshtml
@@ -1,4 +1,7 @@
-﻿<div class="col s12 m6 l6">
+﻿@using Models.Partial
+@model DenunciaMetaData
+
+<div class="col s12 m6 l6">
     <div class="card horizontal light-blue darken-3 white-text">
         <div class="card-image col s12 m3 l3">
             <img src="https://placehold.it/190x223" />
