--- a/WebApp/Views/Denuncia/pv_CardDenuncias.cshtml
+++ b/WebApp/Views/Denuncia/pv_CardDenuncias.cshtml
@@ -9,8 +9,8 @@
         <div class="card-content col s12 m9 l9">
             <h6>TITULO DE PUBLICACION</h6>
             <div class="col s12 m8 l8">
-                <p>Motivo de la denuncia</p>
-                <p>Fecha de creacion</p>
+                <p>@Model.MotivoDenuncia</p>
+                <p>@Model.FechaCreacion</p>
             </div>
             <div class="col s12 m4 l4">
                 <a class="btn blue waves-effect waves-light white-text" href="#">COMENTARIOS</a>
