Creacion de Modal Detalle Necesidad

--- a/WebApp/Views/Denuncia/Inicio.cshtml
+++ b/WebApp/Views/Denuncia/Inicio.cshtml
@@ -1,5 +1,5 @@
-﻿@using Models.Partial
-@model List<DenunciaMetaData>
+﻿@using Models.ORM
+@model List<Denuncias>
 
 @{
     ViewBag.Title = "Inicio";
