--- a/WebApp/Content/lib/materialize/materialize.css
+++ b/WebApp/Content/lib/materialize/materialize.css
@@ -5763,6 +5763,7 @@ body.keyboard-focused .dropdown-content li:focus {
   padding: 0;
   max-height: 70%;
   width: 55%;
+  height: 45%;
   margin: auto;
   overflow-y: auto;
   border-radius: 2px;
