Cambios en progressbar

--- a/WebApp/Views/Shared/pv_ProgressBar.cshtml
+++ b/WebApp/Views/Shared/pv_ProgressBar.cshtml
@@ -1,5 +1,5 @@
 ﻿@model decimal
 
-<div class="progress blue lighten-4" id="progressbar-background">
-    <div class="determinate blue" id="progressbar-inner">@Model%</div>
+<div class="progress blue lighten-4" id="progressbar-background" >
+    <div class="determinate blue" id="progressbar-inner" style="width: @Model.ToString("###")%">@Model%</div>
 </div>
