--- a/WebApp/Content/src/progressbar.css
+++ b/WebApp/Content/src/progressbar.css
@@ -12,13 +12,13 @@
     z-index: 99999;
 }
 
-    .progress .determinate {
-        width: 162px;
-        transition: width 1s ease-in-out;
-        position: relative;
-        padding: 2px;
-        text-align: right;
-        color: white;
-        white-space: nowrap;
-        text-align: center;
-    }
+.progress .determinate {
+    width: 0%;
+    transition: width 1s ease-in-out;
+    position: relative;
+    padding: 2px;
+    text-align: right;
+    color: white;
+    white-space: nowrap;
+    text-align: center;
+}
