--- a/WebApp/Views/Home/PublicacionMasValorada.cshtml
+++ b/WebApp/Views/Home/PublicacionMasValorada.cshtml
@@ -13,11 +13,11 @@
             <hr />
         </div>
         <div class="row">
-            @Html.Partial("pv_CardMasValorada")
-            @Html.Partial("pv_CardMasValorada")
-            @Html.Partial("pv_CardMasValorada")
-            @Html.Partial("pv_CardMasValorada")
-            @Html.Partial("pv_CardMasValorada")
+            @Html.Partial("pv_CardMasValorada",70.0M)
+            @Html.Partial("pv_CardMasValorada",45.5M)
+            @Html.Partial("pv_CardMasValorada",37.3M)
+            @Html.Partial("pv_CardMasValorada",26.8M)
+            @Html.Partial("pv_CardMasValorada",12.0M)
         </div>
     </div>
 </div>
