--- a/WebApp/Views/Home/pv_CardMasValorada.cshtml
+++ b/WebApp/Views/Home/pv_CardMasValorada.cshtml
@@ -1,4 +1,6 @@
-﻿<div class="col s12 m6 l6">
+﻿@model decimal
+
+<div class="col s12 m6 l6">
     <div class="card horizontal light-blue darken-3 white-text">
         <div class="card-stacked">
             <div class="card-content">
@@ -6,7 +8,7 @@
                 <p>Nombre de usuario</p>
                 <p>Fecha de creacion</p>
                 <p>
-                    @Html.Partial("pv_ProgressBar")
+                    @Html.Partial("pv_ProgressBar", Model)
                 </p>
             </div>
             <div class="card-action right-align">
