--- a/WebApp/Views/Denuncia/pv_CardDenuncias.cshtml
+++ b/WebApp/Views/Denuncia/pv_CardDenuncias.cshtml
@@ -13,12 +13,12 @@
                 <p>@Model.FechaCreacion.ToString("d")</p>
             </div>
             <div class="col s12 m4 l4">
-                <a class="btn blue waves-effect waves-light white-text" href="#">COMENTARIOS</a>
+                <a class="btn blue waves-effect waves-light white-text modal-trigger" href="#modalComentarios">COMENTARIOS</a>
             </div>
             <div class="col s12 m12 l12 btn-action">
                 <a class="btn grey waves-effect waves-light white-text modal-trigger" href="#modalNecesidad">DETALLE</a>
-                <a class="btn red waves-effect waves-light white-text" href="#">DESESTIMAR</a>
-                <a class="btn teal waves-effect waves-light white-text" href="#">ACEPTAR</a>
+                <a class="btn red waves-effect waves-light white-text" href="/Denuncia/Desestimar">DESESTIMAR</a>
+                <a class="btn teal waves-effect waves-light white-text" href="/Denuncia/Aceptar">ACEPTAR</a>
             </div>
         </div>
     </div>
@@ -53,4 +53,25 @@
     <div class="modal-footer">
         <a href="#!" class="modal-close waves-effect waves-green btn-flat">Aceptar</a>
     </div>
+</div>
+
+<div id="modalComentarios" class="modal">
+    <div class="modal-content">
+        <div class="col m12 l12">
+            <h3>COMETARIOS</h3>
+            <h4>@Model.Necesidades.Nombre</h4>
+        </div>
+        <div class="col S12 m12 l12">
+            <ul class="collection with-header">
+                @foreach (var item in @Model.Comentarios)
+                {
+                    <li class="collection-item">@item.Descripcion</li>
+                }
+            </ul>
+        </div>
+        <div class="modal-footer">
+            <a href="#!" class="modal-close waves-effect waves-green btn-flat">Aceptar</a>
+        </div>
+    </div>
+    
 </div>
