--- a/WebApp/Views/Denuncia/Inicio.cshtml
+++ b/WebApp/Views/Denuncia/Inicio.cshtml
@@ -1,9 +1,12 @@
 ﻿@using Models.ORM
+
 @model List<Denuncias>
 
 @{
     ViewBag.Title = "Inicio";
     Layout = "~/Views/Shared/_UsuarioLayout.cshtml";
+
+    List<Denuncias> listaPendiente = Model.Where(d => d.Estado == 1).ToList();
 }
 
 <div class="col s12 m12 l12">
@@ -15,10 +18,18 @@
     </div>
     <div class="row contenedor-denuncia">
 
-        @foreach(var item in Model)
-        {
+        @foreach (Denuncias item in listaPendiente)
+        {            
             @Html.Partial("pv_CardDenuncias", item)
-        }        
+        }
+
+        <div id="modalDetalle" class="modal modal-fixed-footer"></div>
+        <div id="modalComentarios" class="modal modal-fixed-footer"></div>
+
+        @if(listaPendiente.Count() == 0)
+        {
+            <div class="msg z-depth-1 center-align msg-alert light-blue grey">No hay denuncias</div>
+        }
     </div>
 </div>
 
